--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="gradientstyle.css" />
+    <link rel="stylesheet" href="/style.css" /> />
 
     <title>Login Form</title>
     <script src="https://kit.fontawesome.com/2455c7eb2a.js" crossorigin="anonymous"></script>
