--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="/style.css" /> />
-
-    <link rel="stylesheet" href="style.css" />
-
-
-    <title>Login Form</title>
+    <link rel="stylesheet" href="/style.css" />
+   <title>Login Form</title>
     <script src="https://kit.fontawesome.com/2455c7eb2a.js" crossorigin="anonymous"></script>
 </head>
 
